// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MarkdownRenderer groupByCategory group commits by category 1`] = `
Array [
  Object {
    "commits": Array [
      Object {
        "categories": Array [
          ":rocket: New Feature",
        ],
        "commitSHA": "a0000003",
      },
    ],
    "name": ":rocket: New Feature",
  },
  Object {
    "commits": Array [],
    "name": ":boom: Breaking Change",
  },
  Object {
    "commits": Array [
      Object {
        "categories": Array [
          ":bug: Bug Fix",
        ],
        "commitSHA": "a0000004",
      },
      Object {
        "categories": Array [
          ":bug: Bug Fix",
        ],
        "commitSHA": "a0000001",
      },
    ],
    "name": ":bug: Bug Fix",
  },
  Object {
    "commits": Array [],
    "name": ":nail_care: Enhancement",
  },
  Object {
    "commits": Array [],
    "name": ":memo: Documentation",
  },
  Object {
    "commits": Array [],
    "name": ":house: Maintenance",
  },
]
`;

exports[`MarkdownRenderer renderContributionList renders a list of contributions 1`] = `
"* My cool PR ([@hzoo](http://hzoo.com))
* [#42](http://github.com/42) My cool PR ([@hzoo](http://hzoo.com))"
`;

exports[`MarkdownRenderer renderContributorList renders a list of GitHub users 1`] = `
"#### Committers: 2
- Tobias Bieniek ([@Turbo87](https://github.com/Turbo87))
- [@hzoo](https://github.com/hzoo)"
`;

exports[`MarkdownRenderer renderRelease includes contributors list 1`] = `"## v1.0.0
###### Released on 2021-05-02

#### Contributors

<kbd>
  <a href="http://hzoo.com">
    <img src="http://hzoo.com/avatar&s=100" width="50" height="50"><br>
    <sub>@hzoo</sub>
  </a>
</kbd>
"`;

exports[`MarkdownRenderer renderRelease renders unreleased commits 1`] = `
"## Unreleased
###### Includes changes up to 2018-07-10

#### :rocket: New Feature
* My cool PR ([@hzoo](http://hzoo.com))"
`;

exports[`MarkdownRenderer renderRelease renders unreleased commits, with named next release 1`] = `
"## v2.0.0-alpha.0
###### Includes changes up to 2018-07-10

#### :rocket: New Feature
* My cool PR ([@hzoo](http://hzoo.com))"
`;

exports[`MarkdownRenderer renderRelease skips contributors list if empty 1`] = `
"## v1.0.0
###### Released on 2021-05-02"
`;
